--- a/index.html
+++ b/index.html
@@ -76,12 +76,29 @@ section h2{color:var(--accent1);margin-bottom:12px;text-shadow:0 0 6px var(--acc
   </nav>
 </header>
 
-<!-- Hero -->
-<section>
-  <div class="tag">Student Portfolio</div>
-  <h2>Learning Today, Becoming My Best Self, Leading Tomorrow</h2>
-  <p>Hi! I’m <strong>Unnati Maurya</strong>, a 16-year-old Class 11 (PCB) student at Sunbeam School Robertsganj. Driven by curiosity, creativity, and a desire to build — whether through stories, public speaking, or web projects. I blend imagination with growing technical skills and a goal-led mindset to create meaningful work.</p>
-  <div class="meta">Location: Sonbhadra, Uttar Pradesh • Email: <a href="mailto:unnati.maurya2528@gmail.com">unnati.maurya2528@gmail.com</a></div>
+<!-- Hero Section with Quick Facts -->
+<section style="display:grid;grid-template-columns:1fr 300px;gap:20px;align-items:start;">
+  <!-- Main Intro -->
+  <div>
+    <div class="tag">Student Portfolio</div>
+    <h2>Learning Today, Becoming My Best Self, Leading Tomorrow</h2>
+    <p>Hi! I’m <strong>Unnati Maurya</strong>, a 16-year-old Class 11 (PCB) student at Sunbeam School Robertsganj. Driven by curiosity, creativity, and a desire to build — whether through stories, public speaking, or web projects. I blend imagination with growing technical skills and a goal-led mindset to create meaningful work.</p>
+    <div class="meta">Location: Sonbhadra, Uttar Pradesh • Email: <a href="mailto:unnati.maurya2528@gmail.com">unnati.maurya2528@gmail.com</a></div>
+  </div>
+
+  <!-- Quick Facts Glass Card -->
+  <aside class="card" style="background:rgba(0,0,0,0.55);backdrop-filter:blur(6px);padding:20px;">
+    <h3 style="margin:0 0 10px;">Quick Facts</h3>
+    <div class="meta">Public speaking • Creative writing • Beginner web coder • Debater • Leadership • HTML/CSS/JS basics</div>
+    <div class="skills" style="margin-top:12px">
+      <div class="skill">Public speaking</div>
+      <div class="skill">Creative writing</div>
+      <div class="skill">HTML</div>
+      <div class="skill">CSS (basic)</div>
+      <div class="skill">JavaScript (basic)</div>
+      <div class="skill">Leadership</div>
+    </div>
+  </aside>
 </section>
 
 <!-- About -->
@@ -249,39 +266,40 @@ section h2{color:var(--accent1);margin-bottom:12px;text-shadow:0 0 6px var(--acc
 <p><strong>Poetry:</strong></p>
 <div class="card">
 <h3>Those Days</h3>
-<p>All the birds flew away, Bowling as I watch 'em go The empty nests the still domain, no I can't take it anymore. The birds weren't pretty anyway, But at least they came on the way With their Wings, they would hide, All the dark bitter side. Now the birds are long gone, I am here all alone, With no one beside me to meet, On the path I put my feet.</p>
+<p>All the birds flew away,<br>
+Bowling as I watch 'em go<br>
+The empty nests the still domain, no I can't take it anymore.<br>
+The birds weren't pretty anyway,<br>
+But at least they came on the way<br>
+With their Wings, they would hide,<br>
+All the dark bitter side.<br>
+Now the birds are long gone,<br>
+I am here all alone,<br>
+With no one beside me to meet,<br>
+On the path I put my feet.</p>
 </div>
+
 <div class="card">
 <h3>Double Dice</h3>
-<p>I rolled the dice, Not once but twice. The first was light, It told me lies. The second fell, But made no sound. A door was there, No walls around.</p>
+<p>I rolled the dice, Not once but twice.<br>
+The first was light,<br>
+It told me lies.<br>
+The second fell,<br>
+But made no sound.<br>
+A door was there,<br>
+No walls around.</p>
 </div>
+
 <div class="card">
 <h3>Double Dice (pt.2)</h3>
-<p>I rolled the dice, Not once but twice. One kissed the flame, A whisper bled, One slept in ice. A silence spoke. The game was rigged Yet still, I woke.</p>
+<p>I rolled the dice, Not once but twice.<br>
+One kissed the flame,<br>
+A whisper bled,<br>
+One slept in ice.<br>
+A silence spoke.<br>
+The game was rigged<br>
+Yet still, I woke.</p>
 </div>
+
 <div class="card">
 <h3>Desires</h3>
-<p>Dangerous desires dance, Draped in dusk, Shadows' sinister song Silences Trust... Is it passion, or poison art? A dangerous thief of soul & heart.</p>
-</div>
-
-<p><strong>Books:</strong></p>
-<ul>
-<li><a href="https://www.bribooks.com/bookstore/kidnapped-by-a-psycho-" target="_blank">Kidnapped by a Psycho</a></li>
-<li><a href="https://www.bribooks.com/bookstore/dare-for-" target="_blank">Dare For</a></li>
-</ul>
-
-<p><strong>Quotes:</strong></p>
-<p>Embedded PDF (Upload your quotes PDF in the same folder):</p>
-<iframe src="quotes.pdf" width="100%" height="400px" style="border:1px solid #00f0ff;border-radius:10px;"></iframe>
-</section>
-
-<!-- Contact -->
-<section id="contact">
-<h2>Contact</h2>
-<p>Email: <a href="mailto:unnati.maurya2528@gmail.com">unnati.maurya2528@gmail.com</a></p>
-<p class="meta">(This is a public portfolio — avoid sharing sensitive personal details.)</p>
-</section>
-
-<div class="footer">© <strong>Unnati Maurya</strong> — Portfolio. Built with care.</div>
-
-</div>
